# leantoken

./: .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  cliff.toml  dist-workspace.toml
.cargo/: config.toml
.codex/agents/: leantoken-context-bundle.toml
.codex/index-performance-design/: goal.md  plan.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-release.yml  build-npm-packages.yml  ci.yml  live-read-decision.yml  monorepo-reconciliation.yml  publish-npm.yml  release-please.yml  release.yml
api/: crates.js  help.html  settings.html  src-files.js
api/leantoken/: all.html  index.html  sidebar-items.js
api/search.index/: 000b9c10d68e.js  000ba4da04e7.js  000dba215a57.js  000ee6015eeb.js  002652a5dfb5.js  002b5f216e30.js  003615dcdb06.js  0036b5ef5211.js  003752c189d3.js  0037e97ec14f.js  00395855ced1.js  003f731e8cae.js  00431653ff85.js  004bd73e165f.js  004dfe29a78e.js  0058aaeb83b5.js  0068db01e3fa.js  006e7e6dd7f2.js  008160bd4082.js  0082a14e00ea.js  0082ec745367.js  00838ec6de97.js  0084b139df81.js  00894a5b5b1d.js  008bb68ac0d5.js  008f5f6fa6f8.js  0092ff8d888b.js  00a1511fff65.js  00b3eaa83008.js  00b6711c3455.js  00be062aec8a.js  00c1c16bf297.js  00c4bb018f51.js  00c810074f74.js  00ca55b10908.js  00cf807ec050.js  00d10d197349.js  00dff0cf369b.js  00e600c1f0fb.js  00e833d5081f.js  (+7694 more)
benchmarks/: README.md  graph_signal_ablation_v1.json  holdout.json  live_read_decision.json  mcp_response_ablation.json  model_ab.example.json  model_ab_trajectory_v1.json  monorepo_reconciliation.json  multi_agent_context_pilot.json  multi_agent_context_suite.json  multi_agent_context_suite_v2.json  representative.json  run_multi_agent_context_pilot.sh  run_multi_agent_context_suite.sh  validate_swe_bench_regions.sh  validation.json  wire_trace.example.json  wire_trace.synthetic.json
benchmarks/evals/: README.md  evidence_boundary_v1.json  evolving_worktree_v1.json  version_aware_tool_critique_v1.json
benchmarks/reports/: adaptive-evidence-portfolio-phase2-linux-x86_64-2026-07-16.json  adaptive-evidence-portfolio-swe-explore-pilot-linux-x86_64-2026-07-16.json  codex-host-receipt-0.144.1.json  evidence-economics-v2-linux-x86_64-2026-07-16.json  graph-signal-ablation-v1.json  holdout-linux-x86_64-2026-07-16.json  host-wire-compatibility-v1-2026-07-20.md  host-wire-compatibility-v1.json  indexing-stream-publication-linux-x86_64-2026-07-20.md  indexing-tokio-linux-x86_64-2026-07-16.json  linux-x86_64-2026-07-15.json  live-read-decision-v1-2026-07-20.md  mcp-response-ablation-v1-2026-07-21.json  mcp-response-ablation-v1-2026-07-21.md  model-ab-trajectory-v1.json  monorepo-reconciliation-v1-2026-07-20.md  multi-agent-context-pilot-codex-0.144.1-full-native.json  multi-agent-context-pilot-codex-0.144.1-thin-leantoken-dual.json  multi-agent-context-pilot-codex-0.144.1-thin-leantoken-structured-owner.json  multi-agent-context-pilot-codex-0.144.1-thin-leantoken-structured.json  multi-agent-context-pilot-codex-0.144.1-thin-native.json  multi-agent-context-suite-v1-codex-0.144.1.json  multi-agent-context-suite-v2-codex-0.144.1.json  oom-release-gate-linux-x86_64-2026-07-20.md  swe-bench-multilingual-development-v1.json  swe-bench-multilingual-development-v2.json  swe-bench-multilingual-four-arm-v1-aborted.json  swe-bench-multilingual-four-arm-v1-commitment.json  swe-bench-multilingual-four-arm-v2-commitment.json  swe-bench-multilingual-four-arm-v2.json  swe-bench-multilingual-gate-a-v1-commitment.json  swe-bench-multilingual-gate-a-v1.json  swe-bench-multilingual-gate-a-v2-bounded-import384.json  swe-bench-multilingual-model-ab-pilot-v1-commitment.json  swe-bench-multilingual-model-ab-pilot-v1.json  swe-bench-multilingual-model-ab-pilot-v2-import384-commitment.json  swe-bench-multilingual-model-ab-pilot-v2-import384.json  validation-2c0388d-ablation-linux-x86_64-2026-07-16.json  validation-2c0388d-linux-x86_64-2026-07-16.json  validation-adaptive-evidence-portfolio-ablation-linux-x86_64-2026-07-16.json  (+5 more)
docs/: architecture.md  development.md  measurement.md  releases.md  roadmap.md  usage.md
examples/: artifact_blake3.rs  benchmark_ablation.rs  codex_host_receipt.rs  codex_multi_agent_receipt.rs  codex_multi_agent_suite.rs  graph_signal_ablation.rs  host_wire_compatibility.rs  hot_path_bounds.rs  indexing_profile.rs  live_read_decision_report.rs  live_read_profile.rs  mcp_response_ablation.rs  mcp_wire_analyze.rs  mcp_wire_capture.rs  mcp_wire_fixture.rs  model_ab.rs  model_ab_codex_adapter.rs  model_ab_dry_run_adapter.rs  model_ab_trajectory.rs  monorepo_reconciliation_report.rs  ranked_region_benchmark.rs  representative_benchmark.rs  sanitize_codex_trajectory.rs  swe_bench_multilingual_gate.rs  swe_bench_multilingual_prepare.rs  swe_bench_validator.rs
npm/: leantoken.cjs  npm-install-e2e.mjs  npm-packaging.test.mjs  platforms.json
scripts/: build-npm-packages.mjs  check-duplicates.sh  check-large-files.sh  check-todos.sh  validate-agents-md.sh
src/: cache.rs  cli.rs  config.rs  coordination.rs  doctor.rs  error.rs  indexer.rs  lib.rs  main.rs  mcp.rs  model.rs  parser.rs  ranking.rs  repository.rs  savings.rs  services.rs  setup.rs  storage.rs  text.rs  tokens.rs  upgrade.rs  watcher.rs
tests/: benchmark_contract.rs  binary.rs  cli.rs  config.rs  graph_signal_ablation_report.rs  indexer.rs  integration.rs  mcp.rs  mcp_token_costs.rs  model_ab_trajectory_report.rs  ranking.rs  repository.rs  representation_comparison.rs  services.rs  storage.rs  tokens.rs  watcher.rs
(+1146 files in other folders)
