[package]
name = "leantoken"
version = "0.1.11"
edition = "2024"
rust-version = "1.95"
autotests = false
description = "Token-budgeted repository context for coding agents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/morluto/leantoken"
homepage = "https://github.com/morluto/leantoken"
readme = "README.md"

[[test]]
name = "integration"
path = "tests/integration.rs"

[dependencies]
blake3 = "1.8.2"
clap = { version = "4.5.51", features = ["derive"] }
directories = "6.0.0"
dialoguer = { version = "0.12.0", default-features = false }
globset = "0.4.18"
ignore = "0.4.28"
inquire = { version = "0.9.4", default-features = false, features = ["crossterm"] }
jsonc-parser = { version = "0.32.4", features = ["cst", "serde"] }
notify = "8.2.0"
nucleo-matcher = "0.3.1"
rayon = "1.11.0"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.35.0", default-features = false }
regex = "1.12.2"
# Temporary v2.2.0-compatible response-task fix. Remove after rust-sdk#1026 ships.
rmcp = { version = "2.2.0", git = "https://github.com/N0zoM1z0/rust-sdk", rev = "58b75588dd884f4e28bb6bc60d255d91e8ce2deb", default-features = false, features = ["server", "macros", "schemars", "transport-io"] }
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled", "cache"] }
rusqlite_migration = "2.6.0"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shell-words = "1.1.1"
thiserror = "2.0.17"
tiktoken-rs = "0.12.0"
tempfile = "3.23.0"
toml_edit = "0.25.12"
tokio = { version = "1.49.0", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7.17", features = ["rt"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "registry"] }
tree-sitter = "0.26.11"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
unidiff = { version = "0.4.0", default-features = false }
wait-timeout = "0.2.1"

[dev-dependencies]
assert_cmd = "2.1.1"
insta = { version = "1.43.2", features = ["json"] }
predicates = "3.1.3"
# Keep test protocol behavior pinned to the same patched SDK revision.
rmcp = { version = "2.2.0", git = "https://github.com/N0zoM1z0/rust-sdk", rev = "58b75588dd884f4e28bb6bc60d255d91e8ce2deb", default-features = false, features = ["client", "transport-async-rw"] }
statrs = "0.18.0"
tokio = { version = "1.49.0", features = ["test-util"] }

[profile.release]
lto = "thin"
strip = true

[profile.dev]
# Preserve line-level backtraces without generating the full DWARF payload for
# this dependency-heavy crate. This also applies to the test profile, which
# inherits from `dev`, and materially reduces local link time and target size.
debug = "line-tables-only"

[profile.dev.package."*"]
# Dependency frames rarely need source-level debugging during LeanToken work.
debug = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
cognitive_complexity = "warn"
todo = "warn"
